--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -42,13 +42,10 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 h1 {
-  font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 600;
-  letter-spacing: 0.4px;
-  line-height: 2em;
-  text-align: left;
-  float: left;
+  font-weight: bold;
+  line-height: 1.2em;
+  text-transform: uppercase;
 }
 
 h2 {
@@ -128,6 +125,17 @@ a:after {
     transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
+/*  ========================== 
+    Icons
+    ========================== */
+
+.big {
+  font-size: 250%;
+  opacity: .2;
+  color: #333;
+}
+
+
 hr {
     display: block;
     height: 1px;
@@ -149,7 +157,14 @@ footer {
 /* ==========================================================================
    Wrap Sections
    ========================================================================== */
-
+.jumbotron {
+  background: transparent;
+  text-align: center;
+  padding: 50px 0 0 0;
+  margin: 0;
+  color: #fff;
+  display: none;
+}
 
 /* ==========================================================================
    Buttons
@@ -160,12 +175,48 @@ footer {
   border: none; 
 }
 /* end reset button */
-
+a.btn {
+  margin: 4px auto 4px auto;
+  display: inline-block;
+  background: #111;
+  font-weight: 600;
+  text-decoration: none;
+  text-align: center;
+  vertical-align: middle;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 100%;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  white-space: nowrap;
+  max-width: 320px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+  color: #fff;
+}
 a.btn.btn-default {
-  border: solid 1px #ccc;
   background: #ccc;
-  padding: 3px;
-  margin: 2px;
+}
+a.btn.btn-primary {
+  background-color: hsl(105, 49%, 48%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5cb63e", endColorstr="#5cb63e");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#5cb63e), to(#5cb63e));
+  background-image: -moz-linear-gradient(top, #5cb63e, #5cb63e);
+  background-image: -ms-linear-gradient(top, #5cb63e, #5cb63e);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #5cb63e), color-stop(100%, #5cb63e));
+  background-image: -webkit-linear-gradient(top, #5cb63e, #5cb63e);
+  background-image: -o-linear-gradient(top, #5cb63e, #5cb63e);
+  background-image: linear-gradient(#5cb63e, #5cb63e);
+  border-color: #5cb63e #5cb63e hsl(105, 49%, 48%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.00);
+  -webkit-font-smoothing: antialiased;
 }
 
 /* Modal Configuration */
@@ -205,24 +256,22 @@ input[type="submit"] {
 	border: 0px;
 }
 select#theme-select {
-    border: 2px solid #fff;
-    background-color: #fff;
-    border-radius: 2px;
-    font-size: inherit;
-    margin: 0;
-    overflow: hidden;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+   background: transparent;
+   border: solid 1px white;
+   font-size: 20px;
+   height: 32px;
+   padding: 5px; /* If you add too much padding here, the options won't show in IE */
+   width: 80%;
 }
 /* ==========================================================================
    Objects
    ========================================================================== */
 .container {
-  width: 95%;
+  width: 95%;  
 }
 .browsertop {
+ -webkit-box-shadow: 0 -8px 10px -5px rgba(0,0,0,0.01);
+  box-shadow: 0 -8px 10px -5px rgba(0,0,0,0.01); 
   margin: 50px auto 0 auto;
   background: #f5f6f7 url("../../assets/img/tab.png")no-repeat 5px 14px;
   text-align: right;
@@ -238,17 +287,20 @@ select#theme-select {
   background-color: #ebeced;
   height: 100%;
   z-index:-1;
-/*  -webkit-box-shadow: 0 -5px 10px -5px rgba(0,0,0,0.5);
-  box-shadow: 0 -5px 10px -5px rgba(0,0,0,0.5); */
-}  
-
-.addressfield {
-  border-radius: 3px;
-  background: #fff;
-  margin: 15px;
 }
-i.fa {
-  margin: 10px 5px 0 0;
+i.fa.greyarrow {
+  color: #a6a7a8;
+  margin: 24px 12px;
+  font-size: 120%;
+}
+.addressfield {
+  border-radius: 5px;
+  background: #fff;
+  padding: 0;
+  margin: 15px 0;
+}
+i.fa.dots {
+  margin: 9px 2px;
 }
 .green {
   color: #6fb54c;  
@@ -259,20 +311,8 @@ i.fa {
 .red {
   color: #d7665d;
 }
-.grey {
-  color: #a6a7a8; 
-}
-.tab {
-  z-index: -1;
-  background: #ccc;
-  border-bottom: 1px solid #fff;
-  padding: 5px;
-  position: fixed;
-  right: 0px;
-  top: 0px;
-  width: 100%;
-  z-index: 9999;
-}
+
+
 /* ==========================================================================
    Viewports
    ========================================================================== */
