--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -18,8 +18,10 @@ body {
   margin: 0;
 }
 
+/* nice green color */
+
 body {
-  background-color: #3caca9;
+  background-color: #222;
   font-family: 'Source Sans Pro', sans-serif;    
   font-size: 14px;
   text-align: left;
@@ -158,15 +160,20 @@ footer {
 /* ==========================================================================
    Wrap Sections
    ========================================================================== */
+.wrap {
+  width: 90%;
+  margin: 0 auto;
+}
 .jumbotron {
   background: transparent;
   text-align: center;
   padding: 50px 0 0 0;
   margin: 0;
-  color: #fff;
-  display: none;
+  color: #111;
 }
-
+.dark {
+  background: #222;
+}
 /* ==========================================================================
    Buttons
    ========================================================================== */
@@ -268,7 +275,8 @@ select#theme-select {
    Objects
    ========================================================================== */
 .container {
-  width: 96%;  
+  width: 100%;  
+  padding: 70px 0;
 }
 .browsertop {
  -webkit-box-shadow: 0 -8px 10px -5px rgba(0,0,0,0.01);
